# schema-automaton

./: .cmsg.txt  .gitattributes  404.html  CHANGELOG.md  CNAME  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: publish.yml  test.yml
api/: index.html
cli/: index.html
dataspec/: __init__.py  document.py  dsl.py  errors.py  formats.py  infer.py  registry.py  schema.py
dataspec/canonical/: __init__.py  deserialize.py  document.py  dsl.py  formats.py  infer.py  operations.py  registry.py  schema.py
demos/: 06_unions_and_nullable.py  07_schema_dsl.py
deserialization/: index.html
design/cli-spec/: index.html
design/model/: index.html
design/oml-grammar/: index.html
design/schema-osd-grammar/: index.html
docs/: README.md  algorithms.md  api.md  architecture.md  cli.md  concepts.md  data-model.md  deserialization.md  design-and-limitations.md  document.md  example.md  faq.md  formats.md  getting-started.md  glossary.md  guide.md  layout.md  operations.md  quickstart.md  schema-dsl.md  schema.md  testing.md  usage.md  user-guide.md  why-omnist.md
docs/design/: cli-spec.md  model.md  oml-grammar.md  schema-dsl-grammar.md  schema-osd-grammar.md
docs/formats/: json.md  oml.md  overview.md  toml.md  xml.md  yaml.md
example/: index.html
examples/: build_document.py  canonical_model.py  convert_formats.py  infer_and_refine.py  quickstart.py  validate_api_payload.py  version_check.py  worked_example.py
examples/cli/: duplicate-records.osd  invalid-order.json  invalid-person.json  lossy.json  messy-person.oml  messy-person.osd  messy.oml  messy.osd  order.json  order.oml  order.osd  order.toml  order.xml  person.json  person.oml  person.osd  person.toml  person.xml  quote-order.osd  sample1.json  sample2.json  v1.osd  v2.osd
formats/json/: index.html
formats/oml/: index.html
formats/overview/: index.html
formats/toml/: index.html
formats/xml/: index.html
formats/yaml/: index.html
glossary/: index.html
guide/: index.html
layout/: index.html
omnist/: __init__.py  cli.py  deserialize.py  document.py  errors.py  formats.py  infer.py  oml.py  osd.py  registry.py  report.py  schema.py
omnist/canonical/: __init__.py  deserialize.py  document.py  formats.py  infer.py  oml.py  osd.py  registry.py  schema.py
omnist/canonical/ops/: __init__.py  extract.py  isomorphic.py  minimize.py  signature.py  subschema.py
omnist/ops/: extract.py  isomorphic.py  minimize.py  prune.py  signature.py  subschema.py
quickstart/: index.html
schema/: index.html
search/: search_index.json
src/: __init__.py  algorithms.py  content_model.py  export.py  formats.py  hlang.py  schema_automaton.py  schema_dsl.py  vdom.py
testing/: index.html
tests/: edge_cases.py  test_canonical.py  test_cli.py  test_cli_examples.py  test_cli_fuzz.py  test_docs.py  test_document.py  test_dsl.py  test_edge_cases.py  test_examples.py  test_formats.py  test_fuzz.py  test_grammar_docs.py  test_oml.py  test_operations.py  test_paper.py  test_property.py  test_registry.py  test_schema.py  test_semantic_oracle.py
tools/: README.md  semantic_oracle.py
why-omnist/: index.html
