[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "omnist"
version = "0.2.5"
description = "One data model, many formats: read, validate, and write JSON, YAML, TOML, XML, and OML."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Thomas Y. Lee" }]
keywords = ["schema", "validation", "json", "yaml", "toml", "xml", "data", "convert"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = []

[project.scripts]
omnist = "omnist.cli:main"

[project.optional-dependencies]
yaml = ["pyyaml"]
toml = ["tomli_w"]          # writing TOML; reading uses stdlib tomllib (3.11+)
xml = ["defusedxml"]
all = ["pyyaml", "tomli_w", "defusedxml"]
dev = ["pytest", "pyyaml", "tomli_w", "defusedxml", "ruff", "hypothesis", "jsonschema"]

[project.urls]
Homepage = "https://github.com/omnist-dev/omnist"
Repository = "https://github.com/omnist-dev/omnist"
Issues = "https://github.com/omnist-dev/omnist/issues"
Changelog = "https://github.com/omnist-dev/omnist/blob/master/CHANGELOG.md"

[tool.setuptools]
packages = ["omnist", "omnist.canonical"]

[tool.setuptools.package-data]
omnist = ["py.typed"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E701", "E702"]  # this codebase uses ; and one-line class/def bodies (dsl.py, examples)
